# django-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
django_template/: manage.py
django_template/core/utils/: collections.py  misc.py
django_template/project/: settings.py
django_template/project/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py  logging.py
django_template/project/settings/templates/: settings.dev.py
